--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#" class="active">Головна</a></li>
+                <li><a href="#">Про нас</a></li>
+                <li><a href="#">Послуги</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+        </nav>
         <h1>Ласкаво просимо на мій веб-сайт</h1>
     </header>
     <main>
@@ -17,4 +25,4 @@
         <p>&copy; 2024 Raindoss. Всі права захищені.</p>
     </footer>
 </body>
-</html> 
+</html>
